syntax = "proto3";

package RecommendationService;


import   "google/api/annotations.proto";

service RecommendationService {
    rpc TileClicked(TileClickedRequest) returns (TileClickedResponse) {
        option (google.api.http) = {
                post:"/tileClicked"
                body: "*"
        };
    }
    rpc GetCollabrativeFilteringData(GetRecommendationRequest) returns (stream ContentTile) {
        option (google.api.http) = {
                post:"/getCollabrativeFilteringData"
                body: "*"
        };
    }
    rpc GetContentbasedData(GetRecommendationRequest) returns (stream ContentTile) {
        option (google.api.http) = {
                post:"/getContentbasedData"
                body: "*"
        };
    }
    rpc InitialRecommendationEngine(InitRecommendationRequest) returns (InitRecommendationResponse) {
        option (google.api.http) = {
                post:"/initRecommendationEngine"
                body: "*"
        };
    }
}

message TileClickedRequest {
    string userId = 1;
    string tileId = 2;
    double tileScore = 3;
}

message InitRecommendationRequest{
    repeated string genres = 1;
    repeated string categories = 2;
    repeated string languages = 3;
}

message InitRecommendationResponse{
    bool isDone = 1;
}

message GetRecommendationRequest{
    string userId = 1;
}

message TileClickedResponse {
    bool success = 1;
}

//message MovieTile{
//    string ref_id = 1;
//    POSTERS posters = 2;
//    CONTENT content = 3;
//    METADATA metadata = 4;
//}
//
//message METADATA {
//    string title = 1;
//}
//
//message POSTERS {
//    repeated string landscape = 1;
//    repeated string portrait = 2;
//}
//
//message CONTENT {
//    bool detailPage = 2;
//    string package = 1;
//}


message ContentTile{
    string title = 1;
    string mediaUrl = 2;
    TileType tileType = 3;
    string poster = 4;
    string portrait = 5;
    bool isDetailPage = 6;
    string packageName = 7;
    string contentId = 8;
    repeated string target = 9;
    string realeaseDate = 10;
}

// contentTile
enum TileType {
    ImageTile = 0;
    VideoTile = 1;
    FeatureTile = 2;
    AdvertiseTile = 3;
    CarouselTile = 4;
}